tests/good/fun_test2.mil
function test() {
	x = 1;
	print(x);
	return 42;
}

function main () {
	a = 5;
	print(a);
	a = test();
	print(a);
}
