tests/bad/not_enough_params.mil
function a(val x) {
	print(x);
}

function main() {
	a();
}